# libioth

./: CMakeLists.txt  README.md  checklicense.c  checklicense.h  config.h.in  ioth.c  ioth.h  ioth_getifaddrs.c  ioth_kernel.c  ioth_kernel_n.c  ioth_picox.c  ioth_picox_n.c  ioth_vdestack.c  ioth_vdestack_n.c  iothaddr.c  iothaddr.h  iothtest_client.c  iothtest_server.c  libioth.c  libioth.h
man/: Makefile  ioth.3  ioth.3.md  ioth.3.ronn  ioth_linksetaddr.3
modules/: CMakeLists.txt  ioth_kernel.c  ioth_picox.c  ioth_vdestack.c
test/: CMakeLists.txt  iothtest_client.c  iothtest_server.c
